themes/barba/layout/components/features/_feature.scss
/* stylelint-disable selector-max-combinators, selector-max-compound-selectors, max-nesting-depth, no-descending-specificity */
.feature {
  @include get-all-space;

  display: block;
  padding: 16rem 4rem 6rem;
  perspective: 1000px;

  @include mq(m) {
    padding: 4rem;
  }

  .is-transitioning & {
    overflow: hidden;
  }
}

.big-shape-outer {
  @include center-y;

  right: 0;
  left: 0;
  opacity: 0.8;

  svg {
    display: block;
    max-width: 56.8rem;
    margin: 0 auto;

    .base,
    .links {
      display: none;
    }
  }

  * {
    pointer-events: none;
  }
}

.colored {
  [data-feature-order='0'] & {
    color: $c-menu-feature-0;
  }

  [data-feature-order='1'] & {
    color: $c-menu-feature-1;
  }

  [data-feature-order='2'] & {
    color: $c-menu-feature-2;
  }

  [data-feature-order='3'] & {
    color: $c-menu-feature-3;
  }

  [data-feature-order='4'] & {
    color: $c-menu-feature-4;
  }

  [data-feature-order='5'] & {
    color: $c-menu-feature-5;
  }
}

.feature-outer {
  position: relative;
  display: flex;
  flex-direction: column;
  max-width: 80rem;
  height: 100%;
  margin: 0 auto;

  @include mq(m, xxxl) {
    padding-top: 6rem;
  }

  p {
    font-size: 1.4rem;
    line-height: 1.8rem;

    @include mq(m) {
      font-size: 2.4rem;
      line-height: 3.6rem;
    }

    a {
      position: relative;
      color: $c-menu-feature-5;

      [data-feature-order='0'] & {
        color: $c-menu-feature-0;
      }

      [data-feature-order='1'] & {
        color: $c-menu-feature-1;
      }

      [data-feature-order='2'] & {
        color: $c-menu-feature-2;
      }

      [data-feature-order='3'] & {
        color: $c-menu-feature-3;
      }

      [data-feature-order='4'] & {
        color: $c-menu-feature-4;
      }

      [data-feature-order='5'] & {
        color: $c-menu-feature-5;
      }

      &::before {
        content: '';
        position: absolute;
        bottom: -0.15em;
        left: 0;
        display: block;
        width: 100%;
        height: 0.2rem;
        background-color: $c-menu-feature-5;
        transform-origin: center left;
        transition: transform 0.3s ease-out;

        [data-feature-order='0'] & {
          background-color: $c-menu-feature-0;
        }

        [data-feature-order='1'] & {
          background-color: $c-menu-feature-1;
        }

        [data-feature-order='2'] & {
          background-color: $c-menu-feature-2;
        }

        [data-feature-order='3'] & {
          background-color: $c-menu-feature-3;
        }

        [data-feature-order='4'] & {
          background-color: $c-menu-feature-4;
        }

        [data-feature-order='5'] & {
          background-color: $c-menu-feature-5;
        }
      }

      &:hover::before {
        transform-origin: center right;
        transform: scaleX(0);
      }
    }
  }

  .feature__action__title {
    font-size: 1.6rem;
    line-height: 2.2rem;
  }
}

.feature__title {
  margin: 0;
  font-family: $ff-alt;
  font-size: 3.2rem;
  font-weight: 400;
  text-align: center;

  @include mq(m) {
    top: -5rem;
    font-size: 5rem;
  }

  @include mq(xxxl) {
    font-size: 9rem;
  }
}

.feature__bodymovin {
  @include get-all-space;
  @include center-xy;

  z-index: -1;
  width: 100vw;
}

.feature .logo.featured {
  @include center-x;

  @include mq(l, xxxl) {
    top: 45%;
  }
}

.credits-table {
  tr {
    display: inline;
  }

  td,
  th {
    position: relative;
    float: left;
    width: 31%;
    margin: 2rem 0.5%;
    padding: 0;

    @include mq(m) {
      width: 23%;
    }
  }

  td > sup {
    display: none;
  }

  a {
    color: $c-menu-feature-5;

    img {
      width: 100%;
    }
  }
}

